<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_set_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kca.www.studytimetablecalc.SetUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear_layout1"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/text_view1"
            android:gravity="center_vertical"
            android:layout_weight="9"
            android:id="@+id/textView" />
        <Spinner
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/spinner_number_of_courses"
            android:layout_weight="1"
            android:entries="@array/numbers" >
        </Spinner>
        <!--<NumberPicker
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/numberPicker_number_of_courses"
            android:layout_weight="1"
            android:inputType="number" />-->

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear_layout2"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/linear_layout1"
        android:layout_alignParentStart="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linear_layout_course"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/text_view3"
                    android:gravity="center_horizontal"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:hint="@string/edit_text_view3"
                        android:layout_weight="3"
                        android:id="@+id/editText" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:hint="@string/edit_text_view4"
                        android:layout_weight="0"
                        android:id="@+id/editText2" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linear_layout3"
        android:layout_below="@+id/linear_layout2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/text_view2"
            android:gravity="center_vertical"
            android:layout_weight="9"
            android:id="@+id/textView2" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/editText_number_of_readin_days"
            android:inputType="number"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linear_layout4"
        android:layout_below="@+id/linear_layout3"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/text_view4"
                    android:gravity="center_horizontal"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/linear_layout_day"
                    android:orientation="horizontal">
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:hint="@string/edit_text_view5"
                        android:layout_weight="3"/>
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:hint="@string/edit_text_view6"
                        android:layout_weight="0"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</RelativeLayout>
